--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.gitignore.io/api/java,eclipse
 # Edit at https://www.gitignore.io/?templates=java,eclipse
 
+# Mac Rubbish
+.DS_Store
+
 ### Eclipse ###
 .metadata
 bin/
