--- a/assets/Driving.Properties
+++ b/assets/Driving.Properties
@@ -1,3 +1,4 @@
+#Map=simple.tmx
 Map=easy-map.tmx
 #Map=medium-map.tmx
 #Map=hard-map.tmx
@@ -5,7 +6,7 @@ Map=easy-map.tmx
 #Controller=controller.SimpleAutoController
 Controller=mycontroller.MyAutoController
 RunSpeed=10
-Fuel=250
-Health=100
+Fuel=2500
+Health=1000
 Conserve=fuel
-ParcelsNeeded=2
+ParcelsNeeded=3
