Composite drive strategy implemented

--- a/assets/Driving.Properties
+++ b/assets/Driving.Properties
@@ -1,6 +1,6 @@
 #Map=simple.tmx
-Map=easy-map.tmx
-#Map=medium-map.tmx
+#Map=easy-map.tmx
+Map=medium-map.tmx
 #Map=hard-map.tmx
 #Controller=controller.ManualController
 #Controller=controller.SimpleAutoController
@@ -9,4 +9,4 @@ RunSpeed=10
 Fuel=2500
 Health=1000
 Conserve=fuel
-ParcelsNeeded=3
+ParcelsNeeded=4
