--- a/assets/Driving.Properties
+++ b/assets/Driving.Properties
@@ -6,7 +6,7 @@ Map=medium-map.tmx
 #Controller=controller.SimpleAutoController
 Controller=mycontroller.MyAutoController
 RunSpeed=10
-Fuel=2500
-Health=1000
-Conserve=fuel
+Fuel=500
+Health=200
+Conserve=health
 ParcelsNeeded=4
