--- a/assets/Driving.Properties
+++ b/assets/Driving.Properties
@@ -1,12 +1,12 @@
 #Map=simple.tmx
 #Map=easy-map.tmx
-Map=medium-map.tmx
-#Map=hard-map.tmx
+#Map=medium-map.tmx
+Map=hard-map.tmx
 #Controller=controller.ManualController
 #Controller=controller.SimpleAutoController
 Controller=mycontroller.MyAutoController
 RunSpeed=10
-Fuel=500
-Health=200
+Fuel=1000
+Health=1000
 Conserve=health
-ParcelsNeeded=4
+ParcelsNeeded=2
