--- a/assets/Driving.Properties
+++ b/assets/Driving.Properties
@@ -6,7 +6,7 @@ Map=hard-map.tmx
 #Controller=controller.SimpleAutoController
 Controller=mycontroller.MyAutoController
 RunSpeed=10
-Fuel=1000
-Health=1000
-Conserve=health
-ParcelsNeeded=2
+Fuel=600
+Health=400
+Conserve=fuel
+ParcelsNeeded=3
