Cleaned code and comments

--- a/assets/Driving.Properties
+++ b/assets/Driving.Properties
@@ -1,12 +1,12 @@
 #Map=simple.tmx
-#Map=easy-map.tmx
+Map=easy-map.tmx
 #Map=medium-map.tmx
-Map=hard-map.tmx
+#Map=hard-map.tmx
 #Controller=controller.ManualController
 #Controller=controller.SimpleAutoController
 Controller=mycontroller.MyAutoController
 RunSpeed=10
-Fuel=600
-Health=400
-Conserve=fuel
-ParcelsNeeded=3
+Fuel=300
+Health=150
+Conserve=health
+ParcelsNeeded=4
